--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.40.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-plugin-viewer-full-width",
+	"version": "1.45.0",
+	"description": "Obsidian plugin that adds a toggle to expand the viewer to the full width of the screen.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
